@@ -1,3 +1,10 @@
+2004-05-21  Theodore A. Roth  <troth@openavr.org>
+[Contributed by Bruce Graham <bgraham@huronnet.com>]
+
+	* configure.in (AM_INIT_AUTOMAKE): Bump version.
+	* include/avr/iotn13.h: Add comments for register defs.
+	Fix SPMEN bit def.
+
 2004-05-14  Theodore A. Roth  <troth@openavr.org>
 [Thanks to Bruce Graham <bgraham@huronnet.com> for reporting these.]
 
